# public/swagger/openapi.json
@@ -1,18 +1,18 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "API de Catálogo",
-    "description": "API para gerenciar produtos e categorias.",
+    "title": "API de Produtos",
+    "description": "API para gerenciar produtos.",
     "version": "1.0.0"
   },
   "servers": [
     {
-      "url": "http://localhost:5000/api/catalog",
+      "url": "http://localhost:5000/api",
       "description": "Servidor de desenvolvimento"
     }
   ],
   "paths": {
-    "/product/search": {
+    "/products/search": {
       "post": {
         "summary": "Buscar produtos",
         "operationId": "searchProducts",
@@ -90,7 +90,7 @@
         }
       }
     },
-    "/product/{id}": {
+    "/products/{id}": {
       "get": {
         "summary": "Obter detalhes de um produto",
         "operationId": "getProductById",
@@ -191,7 +191,7 @@
         }
       }
     },
-    "/product/{productId}/file": {
+    "/products/{productId}/file": {
       "post": {
         "summary": "Enviar arquivo para um produto",
         "operationId": "uploadFile",
